--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,14 @@ quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
 quarkus.rest.path=/matricula/api/v1.0
 #-----------------------------------
+quarkus.http.port=8081
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.methods=GET, PUT, POST, DELETE, PATCH
+## validar token
+mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.issuer=matricula-auth
 # mvn quarkus:dev
 # Ó
 # mvnw quarkus:dev
